--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <p class="heading">
+        <h1>my census acucouunt</h1>
+    </p>
     hello world
     <script src="./do.js"></script>
 </body>
