--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <p class="heading">
         <h1>my census acucouunt</h1>
+        <p>Nigeria</p>
     </p>
     hello world
     <script src="./do.js"></script>
