--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <p class="heading">
-        <h1>my census acucouunt</h1>
+        <h1>my census acucouunt</h1>git 
         <p>Nigeria</p>
+        <a href="">LOVING MY COUNTRY LIKE NEVER BEFORE</a>
     </p>
     hello world
     <script src="./do.js"></script>
